no longer counting down to halloween

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script>
     var d = new Date();
     var month = d.getMonth() + 1;
-    var day = d.getDate();
+    var day = d.getDate() + 1;
     var hour = d.getHours();
     var daysLeft = 0;
     var hoursLeft = 23 - hour;
@@ -34,7 +34,7 @@
         }
         var d = new Date();
         var month = d.getMonth() + 1;
-        var day = d.getDate();
+        var day = d.getDate() + 1;
         var hour = d.getHours();
         var daysLeft = 0;
         var hoursLeft = 23 - hour;
