Updated home page and added styling

--- a/index.html
+++ b/index.html
@@ -45,23 +45,13 @@
             </article>
 
             <article class="project_card">
-                <h2 class="project_card_title">Pokemon Stat Analysis (Data Science)</h2>
+                <h2 class="project_card_title">Pokemon Stat Analysis</h2>
                 <p class="project_card_text">
                     This was a school group project built in Python for analyzing the win rates of Pokemon teams
                     based on their multi-dimensional stat centroids.
                 </p>
-                <a class="project_card_link" href="./pages/AdvancedDataScienceProject/AdvancedDataScienceProject.html"
-                    aria-label="View Pokemon Stat Analysis Data Science project">View Project</a>
-            </article>
-
-            <article class="project_card">
-                <h2 class="project_card_title">Pokemon Stat Analysis (Numerical Computation)</h2>
-                <p class="project_card_text">
-                    This was a school project built in Python for analyzing the stat compositions of successful
-                    teams used on Pokemon Showdown.
-                </p>
-                <a class="project_card_link" href="./pages/NumericalProject/NumericalProject.html"
-                    aria-label="View Pokemon Stat Analysis Numerical Computation project">View Project</a>
+                <a class="project_card_link" href="./pages/PokemonStatAnalysis/PokemonStatAnalysis.html"
+                    aria-label="View Pokemon Stat Analysis project">View Project</a>
             </article>
 
             <article class="project_card">
@@ -72,15 +62,6 @@
                 </p>
                 <a class="project_card_link" href="./pages/RoboticsProject/RoboticsProject.html"
                     aria-label="View Robotics Project">View Project</a>
-            </article>
-
-            <article class="project_card">
-                <h2 class="project_card_title">Machine Learning Project</h2>
-                <p class="project_card_text">
-                    This was a school group project built in Python where I supported data acquisition and cleaning.
-                </p>
-                <a class="project_card_link" href="./pages/MachineLearningProject/MachineLearningProject.html"
-                    aria-label="View Machine Learning Project">View Project</a>
             </article>
 
             <article class="project_card">
